--- a/websites/index.html
+++ b/websites/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Design Services - SkoolZone</title>
+    <title>Website Design Services - jinos_suberb</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
         </section>
         <section class="feature">
             <h2>Free Subdomain</h2>
-            <p>Every website includes a free subdomain under skoolzone.org, helping you establish your online presence effortlessly.</p>
+            <p>Every website includes a free subdomain under jinos_suberb.org, helping you establish your online presence effortlessly.</p>
         </section>
         <section class="feature">
             <h2>Easy and Fast</h2>
@@ -35,22 +35,22 @@
             <div class="client">
                 <h3>AH5K</h3>
                 <p>Explore the website we created for AH5K.</p>
-                <a href="https://ah5k.skoolzone.org" class="feature-button">Visit Website</a>
+                <a href="https://ah5k.jinos_suberb.org" class="feature-button">Visit Website</a>
             </div>
             <div class="client">
                 <h3>Carter Pcs</h3>
                 <p>Explore the website we created for Carter.</p>
-                <a href="https://Carterpcs.skoolzone.org" class="feature-button">Visit Website</a>
+                <a href="https://Carterpcs.jinos_suberb.org" class="feature-button">Visit Website</a>
             </div>
             <div class="client">
                 <h3>Adam Basheer</h3>
                 <p>Explore the resume we created for Adam.</p>
-                <a href="https://Adam.skoolzone.org" class="feature-button">Visit Website</a>
+                <a href="https://Adam.jinos_suberb.org" class="feature-button">Visit Website</a>
             </div>
 		<div class="client">
                 <h3>New SkoolZone Site</h3>
                 <p>Explore the New website we created for Ourselfs.</p>
-                <a href="https://skoolzone.org/newsite" class="feature-button">Visit Website</a>
+                <a href="https://jinos_suberb.org/newsite" class="feature-button">Visit Website</a>
             </div>
 
             <!-- Add more clients here if needed -->
@@ -59,7 +59,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2024 SkoolZone. All rights reserved.</p>
+            <p>&copy; 2025 jinos_suberb. no wights reserved.</p>
             <div class="mode-toggle">
                 <label for="mode-switch">Dark Mode</label>
                 <input type="checkbox" id="mode-switch">
