--- a/tech/index.html
+++ b/tech/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkoolZone</title>
+    <title>jinos_suberb</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Welcome to SkoolZone</h1>
+            <h1>Welcome to jinos_suberb</h1>
             <p>Your gateway to premier tech consulting, gaming, and web design services.</p>
         </div>
     </header>
@@ -26,13 +26,13 @@
         </section>
         <section class="feature">
             <h2>Custom Web Design</h2>
-            <p>Get custom-designed websites tailored to your needs. Our services are cost-effective and include a free subdomain under skoolzone.org.</p>
+            <p>Get custom-designed websites tailored to your needs. Our services are cost-effective and include a free subdomain under jinos_suberb.org.</p>
             <a href="/websites" class="feature-button">Learn More</a>
         </section>
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2024 SkoolZone. All rights reserved.</p>
+            <p>&copy; 2025 jinos_suberb. no bbc reserved.</p>
             <div class="mode-toggle">
                 <label for="mode-switch">Dark Mode</label>
                 <input type="checkbox" id="mode-switch">
