--- a/newsite/index.html
+++ b/newsite/index.html
@@ -63,7 +63,7 @@
       </div></header>
     <section class="u-align-left u-clearfix u-container-align-center u-image u-section-1" id="carousel_96a6" src="" data-image-width="1980" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-custom-font u-text u-text-custom-color-1 u-title u-text-1" data-animation-name="flipIn" data-animation-duration="1500" data-animation-direction="X"> Welcome to SkoolZone</h1>
+        <h1 class="u-align-center u-custom-font u-text u-text-custom-color-1 u-title u-text-1" data-animation-name="flipIn" data-animation-duration="1500" data-animation-direction="X"> Welcome to jinos_suberb</h1>
         <a href="./#carousel_6cca" class="u-active-white u-align-center u-btn u-btn-round u-button-style u-hover-white u-palette-1-base u-radius-15 u-text-active-palette-1-base u-text-hover-palette-1-base u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500" data-animation-direction="">Learn more</a>
       </div>
     </section>
