--- a/contact/sent/index.html
+++ b/contact/sent/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message Sent - SkoolZone</title>
+    <title>Message Sent - jinos_suberb</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2024 SkoolZone. All rights reserved.</p>
+            <p>&copy; 2025 jinos_suberb All skibidi reserved.</p>
             <div class="mode-toggle">
                 <label for="mode-switch">Dark Mode</label>
                 <input type="checkbox" id="mode-switch">
