--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - SkoolZone</title>
+    <title>Contact Us - jinos_suberb</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
